# smartclinic

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SmartClinic_Short_Proposal.md  Software Architecture Presentations Marking Scheme (1).xlsx  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_api.py
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
docs/: DEMO_GUIDE.md  LOCAL_SETUP.md  README.md  context-map.md  demo-script.md  deployment-guide.md  quality-attribute-scenarios.md  security-and-compliance.md  trade-offs-and-risks.md  ubiquitous-language.md
docs/adr/: 0001-record-architecture-decisions.md  0002-bounded-contexts-as-microservices.md  0003-event-sourcing-for-clinical-context.md  0004-cqrs-for-clinical-and-billing.md  0005-saga-for-patient-visit-lifecycle.md  0006-specification-pattern-in-pharmacy.md  0007-anti-corruption-layer-for-drug-db.md  0008-rabbitmq-as-event-bus.md  0009-transactional-outbox-and-inbox.md  0010-shared-kernel-scope-and-governance.md  0011-keycloak-oidc-for-rbac.md  (+3 more)
frontend/: Dockerfile  angular.json  package.json  tsconfig.json
libs/shared_kernel/: README.md  pyproject.toml
libs/shared_kernel/src/shared_kernel/: __init__.py
libs/shared_kernel/src/shared_kernel/ai/: copilot_port.py
libs/shared_kernel/src/shared_kernel/application/: __init__.py  command.py  mediator.py  query.py  unit_of_work.py
libs/shared_kernel/src/shared_kernel/domain/: __init__.py  aggregate_root.py  domain_event.py  entity.py  event_sourced_aggregate.py  exceptions.py  repository.py  result.py  specification.py  value_object.py
libs/shared_kernel/src/shared_kernel/fastapi/: __init__.py  app_factory.py  dependencies.py  exception_handlers.py  health.py  middleware.py
libs/shared_kernel/src/shared_kernel/infrastructure/: __init__.py  correlation.py  database.py  event_bus.py  inbox.py  logging.py  metrics.py  outbox.py  security.py  settings.py  sqlalchemy_uow.py  tracing.py
libs/shared_kernel/src/shared_kernel/types/: __init__.py  clock.py  contact.py  identifiers.py  money.py  national_id.py  person_name.py
libs/shared_kernel/tests/: conftest.py
libs/shared_kernel/tests/application/: test_mediator.py
libs/shared_kernel/tests/domain/: test_aggregate_root.py  test_entity.py  test_specification.py  test_value_object.py
libs/shared_kernel/tests/fitness/: test_architecture.py
libs/shared_kernel/tests/infrastructure/: test_outbox.py
libs/shared_kernel/tests/types/: test_clock.py  test_contact.py  test_identifiers.py  test_money.py  test_national_id.py
services/clinical/: Dockerfile  README.md  pyproject.toml
services/clinical/src/clinical/: main.py
services/clinical/src/clinical/api/: routes.py
services/clinical/src/clinical/application/: commands.py  handlers.py
services/clinical/src/clinical/domain/: encounter.py  events.py  repository.py  value_objects.py
services/clinical/src/clinical/infrastructure/: event_store.py  orm.py  projections.py  repository.py  settings.py
services/clinical/src/clinical/published_language/: events_v1.py
services/clinical/tests/domain/: test_encounter.py
services/clinical/tests/infrastructure/: test_event_store.py
services/patient_identity/: Dockerfile  README.md  pyproject.toml
services/patient_identity/src/patient_identity/: __init__.py  main.py
services/patient_identity/src/patient_identity/api/: __init__.py  dtos.py  routes.py
services/patient_identity/src/patient_identity/application/: __init__.py  commands.py  handlers.py  queries.py
services/patient_identity/src/patient_identity/domain/: __init__.py  events.py  patient.py  repository.py  value_objects.py
services/patient_identity/src/patient_identity/infrastructure/: __init__.py  orm.py  repository.py  settings.py
services/patient_identity/src/patient_identity/published_language/: __init__.py  events_v1.py
services/patient_identity/tests/: conftest.py
services/patient_identity/tests/application/: test_handlers.py
services/patient_identity/tests/domain/: conftest.py  test_patient.py
services/patient_identity/tests/integration/: test_repository.py
services/pharmacy/: Dockerfile  README.md  pyproject.toml
services/pharmacy/src/pharmacy/: main.py
services/pharmacy/src/pharmacy/acl/: drug_interaction_port.py  rxnav_client.py
services/pharmacy/src/pharmacy/api/: routes.py
services/pharmacy/src/pharmacy/application/: commands.py  handlers.py
services/pharmacy/src/pharmacy/domain/: events.py  prescription.py  specifications.py  value_objects.py
services/pharmacy/src/pharmacy/infrastructure/: clinical_event_handler.py  orm.py  repository.py  settings.py
services/pharmacy/src/pharmacy/published_language/: events_v1.py
services/pharmacy/tests/acl/: test_rxnav_acl.py
services/pharmacy/tests/domain/: test_specifications.py
services/saga_orchestrator/: Dockerfile  README.md  pyproject.toml
services/saga_orchestrator/src/saga_orchestrator/: __init__.py  main.py
services/saga_orchestrator/src/saga_orchestrator/api/: __init__.py  routes.py
services/saga_orchestrator/src/saga_orchestrator/domain/: __init__.py  events.py  patient_visit_saga.py  value_objects.py
services/saga_orchestrator/src/saga_orchestrator/infrastructure/: __init__.py  event_handler.py  orm.py  repository.py  settings.py
services/saga_orchestrator/tests/domain/: test_patient_visit_saga.py
services/scheduling/: Dockerfile  README.md  pyproject.toml
services/scheduling/src/scheduling/: __init__.py  main.py
services/scheduling/src/scheduling/api/: __init__.py  dtos.py  routes.py
services/scheduling/src/scheduling/application/: __init__.py  commands.py  handlers.py  queries.py
services/scheduling/src/scheduling/domain/: __init__.py  appointment.py  events.py  repository.py  value_objects.py
services/scheduling/src/scheduling/infrastructure/: __init__.py  orm.py  patient_projection.py  repository.py  settings.py
services/scheduling/src/scheduling/published_language/: __init__.py  events_v1.py
services/scheduling/tests/domain/: test_appointment.py
(+127 files in other folders)
