[project]
name = "shared-kernel"
version = "0.1.0"
description = "SmartClinic shared kernel — DDD building blocks and cross-cutting infrastructure."
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "Taruvinga, Katondo, Fukuzeya" }]

dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "structlog>=24.4.0",
    "httpx>=0.27.2",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "aio-pika>=9.4.3",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-aio-pika>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "python-jose[cryptography]>=3.3.0",
    "cachetools>=5.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_kernel"]
