# Patient Identity — bounded-context service (Phase 2).

[project]
name = "patient_identity"
version = "0.2.0"
description = "SmartClinic — Patient Identity bounded context."
requires-python = ">=3.12"
dependencies = [
    "shared_kernel",
    # Web framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Settings
    "pydantic-settings>=2.4",
    # RabbitMQ (also pulled by shared_kernel but explicit here for clarity)
    "aio-pika>=9.4",
]

[tool.uv.sources]
shared_kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patient_identity"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
